--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="./style.css">
 <link rel="icon" type="image/png" href="./Fotos congregação/favicon.png">
-
-
 <title>Equipe</title>
 </head>
 <body>
 
-<div class="container">
-    <h1>Integrantes</h1>
+    <div class="tituloi">
+        <h1>Integrantes</h1>
+    </div>
+
+<div class="container"> 
     <div class="integrante">
         <img src="./Fotos congregação/Biel.png" alt="Foto de Gabriel">
         <div class="info">
@@ -48,6 +49,24 @@
             <span class="role">Designer: Um designer de TI cria interfaces fáceis de usar e atraentes para produtos de software, trabalhando em colaboração com desenvolvedores e conduzindo testes de usabilidade para garantir uma boa experiência do usuário.</span>
         </div>
     </div>
+    <!-- Título "Proposta de projeto" centralizado com a mesma fonte -->
+    <h2 class="titulo-centralizado">Proposta de projeto</h2>
+    
+    <!-- Espaço para texto -->
+    <p class="texto">Nos foi proposto pelo professor de sala de aula Cássio Gimenez que desenvolvêssemos em equipe um aplicativo Todo (Lista de tarefas) utilizando React Native. Os critérios estabelecidos incluíam a implementação de botões para editar, excluir e adicionar tarefas, capacidade de selecionar e exibir imagens, criação de uma página de login e a integração de um sensor para acessar um site.</p>
+
+     <!-- Título "Código React Native" -->
+     <h2 class="titulo-centralizado">Código React Native</h2>
+
+     <!-- Espaço para imagens -->
+     <p><strong>Função para adicionar uma nova tarefa</strong></p>
+     <div class="imagens">
+         <img src="./Fotos congregação/print 1.png" alt="Imagem 1" width="470"><p><strong>Função para editar uma tarefa existente</strong></p>
+         <img src="./Fotos congregação/print 2.png" alt="Imagem 2" width="470"><p><strong>Função para excluir uma tarefa existente e Função para selecionar uma imagem da galeria</strong></p>
+         <img src="./Fotos congregação/print 3.png" alt="Imagem 3" width="470"><p><strong>Componete de Login</strong></p>
+         <img src="./Fotos congregação/print 4.png" alt="Imagem 4" width="470"><p><strong>Efeito para detectar agitação e abrir o site</strong></p>
+         <img src="./Fotos congregação/print 5.png" alt="Imagem 5" width="470">
+     </div>
 </div>
 
 </body>
