--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h2 class="titulo-centralizado">Proposta de projeto</h2>
     
     <!-- Espaço para texto -->
-    <p class="texto">Nos foi proposto pelo professor de sala de aula Cássio Gimenez que desenvolvêssemos em equipe um aplicativo Todo (Lista de tarefas) utilizando React Native. Os critérios estabelecidos incluíam a implementação de botões para editar, excluir e adicionar tarefas, capacidade de selecionar e exibir imagens, criação de uma página de login e a integração de um sensor para acessar um site.</p>
+    <p class="texto">Nos foi proposto pelo professor de sala de aula José Cássio Gimenez que desenvolvêssemos em equipe um aplicativo Todo (Lista de tarefas) utilizando React Native. Os critérios estabelecidos incluíam a implementação de botões para editar, excluir e adicionar tarefas, capacidade de selecionar e exibir imagens, criação de uma página de login e a integração de um sensor para acessar um site.</p>
 
      <!-- Título "Código React Native" -->
      <h2 class="titulo-centralizado">Código React Native</h2>
